# sceptre-mcp-server

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yaml  tests.yaml
.kiro/hooks/: dependency-update-check.kiro.hook  lint-on-save.kiro.hook  post-task-tests.kiro.hook  pre-commit-check.kiro.hook  test-on-save.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/sceptre-mcp-server/: design.md  requirements.md  tasks.md
src/sceptre_mcp_server/: server.py
tests/: test_server.py
