[project]
name = "sceptre-mcp-server"
version = "0.1.0"
description = "MCP server for Sceptre CloudFormation management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastmcp>=0.2.0",
    "sceptre>=4.0.0"
]

[project.scripts]
sceptre-mcp-server = "sceptre_mcp_server.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
