[tool.poetry]
name = "sceptre-mcp-server"
version = "0.1.0"
description = "MCP server for Sceptre CloudFormation management"
authors = ["Sceptre <sceptreorg@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "sceptre_mcp_server", from = "src"}]
keywords = ["aws", "cloud", "devops", "infrastructure", "tools", "cli"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastmcp = ">=0.2.0"
pydantic = ">=2.7.0,<2.12.0"
sceptre = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.1"
tox = "^3.23.0"

[tool.poetry.scripts]
sceptre-mcp-server = "sceptre_mcp_server.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
